# stm32-bootloader-client-rs

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
examples/: read_chip_id.rs
src/: lib.rs
